<resources>
    <string name="app_name">Diurnal</string>
    <string name="action_settings">Settings</string>
    <string name="logo">Logo</string>

    <string name="test">Test</string>

    <string name="month">Month</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="record">Record</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="refresh">Refresh</string>

    <string name="signInSuccess">Successful log in!</string>
    <string name="signInFailed">Authentication failed.</string>

    <string name="internetConnectionSuccess">Successful connectivity to the Internet!</string>
    <string name="internetConnectionFailed">No Internet Connection. Please check your connectivity.</string>
    <string name="internetConnectionFailedRecords">No Internet Connection. All changes will no be saved.</string>
    <string name="internetConnectionFailedPhoto">No Internet Connection. You cannot upload an image.</string>

    <string name="delete">Delete</string>
    <string name="deleteConfirmation">Are you sure you want to delete this record?</string>
    <string name="delete_photo">Delete a photo</string>
    <string name="deletePhotoConfirmation">This photo will be deleted</string>

    <string name="cancelUploadConfirmation">Photo is still uploading. Do you want to continue uploading?</string>
    <string name="continueUploading">Continue</string>

    <string name="choose_take_photo">Choose or take a photo</string>
    <string name="choosePhoto">Choose photo from memory</string>
    <string name="takePhoto">Take a photo</string>
    <string name="permissionStorageDenied">You should allow storage permissions to add an image.</string>
    <string name="permissionCameraDenied">You should allow camera permissions to take an image.</string>

    <string name="emptyRecordsList">There are no records</string>
    <string name="emptyRecordsListCalendar">There are no records on this day</string>

    <string name="thought">Describe your thoughts</string>

    <string name="photoLimitMessage">The limit of images</string>
    <string name="photoLimitMessageDialog">You reached limit of 50 photos.</string>
    <string name="photo">Photo</string>
    <string name="photoFullSizeDescription">Full size photo</string>

    <!--Preferences-->
    <string name="settings">Settings</string>
    <string name="darkTheme">Dark Theme</string>
    <string name="version">Version</string>
    <string name="privacyPolicy">Privacy policy</string>
    <string name="termsOfService">Terms of service</string>
    <string name="logOut">Log out</string>
</resources>
