<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".mainscreen.MainScreenActivity">

    <item android:id="@+id/action_month"
        android:title="@string/month"
        android:icon="@drawable/ic_apps_black_24dp"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_black_24dp"
        android:orderInCategory="1"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item android:id="@+id/action_refresh"
        android:title="@string/refresh"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_sign_out"
        android:title="@string/sign_out"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>