<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/toolbarBackground"
    app:contentInsetStart="@dimen/toolbar_contentInset"
    app:contentInsetEnd="@dimen/toolbar_contentInset"
    android:elevation="1dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/default_margin"
        android:id="@+id/toolbar_main_layout"
        android:layout_marginEnd="@dimen/toolbar_margin_end">

        <TextView
            android:id="@+id/toolbar_main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="72dp"
            android:fontFamily="@font/roboto"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar_main_month"
            android:src="@drawable/ic_apps_black_24dp"
            android:contentDescription="@string/month"
            android:layout_alignParentEnd="true"/>

        <ImageView
            android:id="@+id/toolbar_main_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_toStartOf="@+id/toolbar_main_month"
            android:src="@drawable/ic_search_black_24dp"
            android:contentDescription="@string/search"/>

    </RelativeLayout>

</androidx.appcompat.widget.Toolbar>